fixed posts filtering on homepage, remove footer top,bot padding

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -39,10 +39,12 @@
 {{- end }}
 
 {{- $pages := union .RegularPages .Sections }}
+{{/* - $pages := where (union .RegularPages .Sections) "Section" "blog" */}}
 
 {{- if .IsHome }}
 {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true" }}
+{{- $pages = where .Site.RegularPages "Section" "blog"}} {{/* My custom filter to show only blog posts*/}}
 {{- end }}
 
 {{- $paginator := .Paginate $pages }}
@@ -84,7 +86,8 @@
   {{- end }}
   <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
 </article>
-{{- end }}
+
+{{- end }}{{/* end range loop*/}}
 
 {{- if gt $paginator.TotalPages 1 }}
 <footer class="page-footer">
@@ -111,4 +114,5 @@
 
 {{- end }}{{/* end profileMode */}}
 
-{{- end }}{{- /* end main */ -}}
+{{- end }}
+{{- /* end main */ -}}
