fixed posts filtering on homepage, remove footer top,bot padding

--- a/assets/css/common/footer.css
+++ b/assets/css/common/footer.css
@@ -27,9 +27,9 @@
     color: inherit;
 }
 
-.footer a:hover {
+/* .footer a:hover { */
     /* border-bottom: 1px solid var(--primary); */
-}
+/* } */
 
 .footer nav {
     display: flex;
