--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,9 @@
 {{- /* Comments area start */ -}}
 {{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
+<br>
+<script src="https://giscus.app/client.js" data-repo="shivajreddy/shivareddydev-comments" data-repo-id="R_kgDOJqO6vw"
+  data-category="[ENTER CATEGORY NAME HERE]" data-category-id="[ENTER CATEGORY ID HERE]" data-mapping="pathname"
+  data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
+  data-theme="preferred_color_scheme" data-lang="en" crossorigin="anonymous" async>
+  </script>
 {{- /* Comments area end */ -}}
