--- a/layouts/_default/resume.html
+++ b/layouts/_default/resume.html
@@ -2,7 +2,8 @@
 
 
 
-<embed src="/files/resume.pdf" width="800" height="500">
+<embed src="/files/resume.pdf" type="application/pdf" width="100%" height="1080px">
+
 <!-- image: images/post_images/shivareddy_blog.jpg -->
 
 <footer class="post-footer">
